Corrigindo rota do botão home no header

--- a/templates/galeria/partials/_sidebar.html
+++ b/templates/galeria/partials/_sidebar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <section class="menu-lateral">
   <nav class="menu-lateral__navegacao">
-    <a href="#"
+    <a href="{% url 'index' %}"
       ><img src="{% static 'assets/ícones/1x/Home - ativo.png' %}" /> Home</a
     >
     <a href="#"
